# QT_HomeWork

./: .gitignore  CMakeLists.txt  README.MD  WaveGenerator.pro  задача.txt
QtEmulator/: BaseWave.cpp  BaseWave.hpp  CMakeLists.txt  QtEmulator.pro  SocketSender.cpp  SocketSender.h  WaveControl.hpp  WaveFunction.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  senddata.cpp  senddata.h  signal.cpp  signal.h  simplewavecontrol.cpp  simplewavecontrol.h
QtRegistrator/: CMakeLists.txt  QtRegistrator.pro  RecieveData.cpp  RecieveData.h  main.cpp  mainwindow.cpp  mainwindow.h  signalmanipulateelement.cpp  signalmanipulateelement.h
include/CommonLib/: Client.h  Common.h  Packet.h  Server.h
libs/: CMakeLists.txt
libs/CommonLib/: Client.cpp  CommonLib.pro  CoordinatePacket.cpp  Packet.cpp  Server.cpp
libs/CommonLib/include/: Client.h  CoordinatePacket.h  Server.h
